--- a/src/app.scss
+++ b/src/app.scss
@@ -25,3 +25,5 @@
 
 @import 'partials/page/page.scss';
 @import 'partials/logo/logo.scss';
+@import 'partials/cover/cover.scss';
+@import 'partials/footer/footer.scss';
