--- a/src/partials/logo/logo.scss
+++ b/src/partials/logo/logo.scss
@@ -10,4 +10,9 @@
         width: 100%;
         height: 100%;
     }
+
+    @include sm {
+        width: 96px;
+        height: 96px;
+    }    
 }
