--- a/src/partials/footer/footer.scss
+++ b/src/partials/footer/footer.scss
@@ -1,24 +1,40 @@
 .footer {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 1rem;
+    font-size: 14px;
+    line-height: 22px;
     padding-bottom: 24px;
+    color: #8990A1;
+    width: 100%;
+    flex-direction: row;
+    margin-top: -3vh;
+    position: relative;
+    z-index: 1000;
 
-    span, a {
-        margin: 8px;
-        padding: 8px;
+    div {
+        width: 50%;
     }
 
-    a {
-        color: $color-content;
+    div+div {
+        padding-left: 50px;
     }
 
-    span {
-        opacity: 0.3;
+    a, a:hover, a:visited {
+        color:#0075FF;
     }
 
     @include sm {
         flex-direction: column;
+        text-align: center;
+        width: 100%;
+        padding: 45px;
+
+        div {
+            width: 100%;
+        }
+
+        div+div {
+            padding-left: 0;
+            margin-top: 20px;
+        }
     }
 }
