--- a/src/scss/base/_vars.scss
+++ b/src/scss/base/_vars.scss
@@ -13,6 +13,7 @@ $color-black: #000;
 $color-background: $color-white;
 $color-content: $color-black;
 $color-active-first: #cdff26;
+$color-main: #0075FF;
 $color-active-second: #0728EF;
 $color-active-third: #F5F5F5;
 
