--- a/src/scss/base/_fonts.scss
+++ b/src/scss/base/_fonts.scss
@@ -1,7 +1,7 @@
 /**
  * Fonts
 */
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700;900&display=swap');
 
 html {
   font-family: 'Noto Sans','SF Pro Icons','Helvetica Neue','Helvetica','Roboto','Arial',sans-serif;
