--- a/src/app.scss
+++ b/src/app.scss
@@ -35,3 +35,5 @@
 @import 'partials/columns/columns.scss';
 @import 'partials/button/button.scss';
 @import 'partials/hightlight/hightlight.scss';
+@import 'partials/cards/cards.scss';
+@import 'partials/icon-list/icon-list.scss';
