--- a/src/partials/body/body.scss
+++ b/src/partials/body/body.scss
@@ -2,4 +2,5 @@ body {
     background-color: $color-background;
     color: $color-content;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
