--- a/src/partials/hightlight/hightlight.scss
+++ b/src/partials/hightlight/hightlight.scss
@@ -10,7 +10,7 @@
         position: absolute;
         bottom: -4px;
         left: 0;
-        background-image: url('assets/line.svg');
+        background-image: url('assets/line-2.svg');
         background-size: 100% 6px;
         background-repeat: no-repeat;
     }
