--- a/src/partials/footer/footer.scss
+++ b/src/partials/footer/footer.scss
@@ -6,9 +6,10 @@
     color: #8990A1;
     width: 100%;
     flex-direction: row;
-    margin-top: -3vh;
+    margin-top: 48px;
     position: relative;
     z-index: 1000;
+
 
     div {
         width: 50%;
