--- a/src/partials/menu/menu.scss
+++ b/src/partials/menu/menu.scss
@@ -5,6 +5,15 @@
    width: 100vw;
    padding: 16px 0;
    z-index: 1000;
+   transform: translateY(0px);
+   transition: transform 0.2s 0.5s ease;
+   backdrop-filter: blur(10px);
+   background-color: rgba(250,250,250,0.8);
+
+   &_hidden {
+    transform: translateY(-100%);
+    
+   }
 
    &__wrapper {
     display: flex;
