--- a/src/partials/cards/cards.scss
+++ b/src/partials/cards/cards.scss
@@ -10,16 +10,25 @@
         display: flex;
         gap: 32px;
         /*transform: translateX(calc(-100% - 32px));*/
+        transition: all .5s ease;
+    }
+
+    &__focus-card_1 {
+        transform: translateX(0);
+    }
+
+    &__focus-card_2 {
+        transform: translateX(-100%);
+    }
+
+    &__focus-card_3 {
+        transform: translateX(-200%);
     }
 
     &__nav {
         display: flex;
         list-style: none;
         justify-content: center;
-
-        a {
-            color: $color-content;
-        }    
 
         & li {
             padding: 16px;
@@ -46,6 +55,7 @@
 
         &__content {
             width: 50%;
+
         }
 
         &__cover {
