--- a/src/partials/footer/footer.scss
+++ b/src/partials/footer/footer.scss
@@ -10,6 +10,10 @@
     position: relative;
     z-index: 1000;
 
+    @include sm {
+        margin-top: 0;
+    }
+
 
     div {
         width: 50%;
