--- a/src/partials/cards/cards.scss
+++ b/src/partials/cards/cards.scss
@@ -4,6 +4,10 @@
     
     &__wrapper {
         margin: 0 -48px;
+
+        @include sm {
+            margin: 0 -8px;
+        }
     }
 
     &__content {
@@ -11,6 +15,12 @@
         gap: 32px;
         /*transform: translateX(calc(-100% - 32px));*/
         transition: all .5s ease;
+
+        @include sm {
+            flex-direction: column;
+            gap: 16px;
+            position: relative;
+        }
     }
 
     &__focus-card_1 {
@@ -18,17 +28,21 @@
     }
 
     &__focus-card_2 {
-        transform: translateX(-100%);
+        transform: translateX(calc(-100% - 16px));
     }
 
     &__focus-card_3 {
-        transform: translateX(-200%);
+        transform: translateX(calc(-200% - 24px));
     }
 
     &__nav {
         display: flex;
         list-style: none;
         justify-content: center;
+
+        @include sm {
+            display: none;
+        }
 
         & li {
             padding: 16px;
@@ -48,6 +62,15 @@
         flex-shrink: 0;
         width: 100%;
 
+        @include sm {
+            height: auto;
+            margin: 0;
+            flex-direction: column;
+            padding: 24px 24px 48px;
+            position: sticky;
+            top: 24px;
+        }
+
         &.card_real-time {
             background-image: url('assets/realtime-background.jpg');
             background-size: cover;
@@ -56,6 +79,10 @@
         &__content {
             width: 50%;
 
+            @include sm {
+                width: 100%;
+            }
+
         }
 
         &__cover {
@@ -63,6 +90,36 @@
             position: absolute;
             right: 10%;
             bottom: 0;
+
+            @include sm {
+                width: 100%;
+                text-align: center;
+                position: static;
+                order: -1;
+                padding: 16px 84px 32px;
+            }
+
+            & img {
+                
+
+
+                    &.sm {
+                        display: none;
+                    }
+                    &.lm {
+                        display: block;
+                    }
+                
+
+                @include sm {
+                    &.sm {
+                        display: block;
+                    }
+                    &.lm {
+                        display: none;
+                    }
+                }
+            }
         }
 
         & p:last-child {
