--- a/src/partials/columns/columns.scss
+++ b/src/partials/columns/columns.scss
@@ -1,7 +1,11 @@
 .columns {
 
     display: flex;
-    gap: 75px;
+    gap: 4px 75px;
+
+    @include sm {
+        flex-direction: column;
+    }
     
 
     & > li {
@@ -12,6 +16,10 @@
         
         & > li {
             width: 50%;
+
+            @include sm {
+                width: 100%;
+            }
         }
     }
 
@@ -22,6 +30,11 @@
         & > li {
 
         }    
+
+        @include sm {
+            display: flex;
+            flex-direction: column;
+        }
     }
 
     &_3 {
@@ -31,6 +44,10 @@
             display: grid;
             justify-items: start;
             align-items: start;
+
+            @include sm {
+                width: 100%;
+            }
 
             a {
                 margin-top: auto;
