--- a/src/partials/h/h.scss
+++ b/src/partials/h/h.scss
@@ -6,7 +6,7 @@ h1 {
     margin-top: 24px;
 
     @include sm {
-        font-size: 48px;
+        font-size: 38px;
         line-height: 1.3;
     }
 }
@@ -16,6 +16,10 @@ h2 {
     font-weight: 900;
     line-height: 128%;
     margin-bottom: 24px;
+
+    @include sm {
+        font-size: 32px;
+    }
 }
 
 h3 {
@@ -24,11 +28,21 @@ h3 {
     font-weight: 700;
     margin-bottom: 24px;
 
+    @include sm {
+        font-size: 18px;
+    }
+
     &.h3_center {
         width: 100%;
         text-align: center;
         padding: 0 200px;
         margin-bottom: 48px;
+
+        @include sm { 
+            font-size: 18px;
+            text-align: left;
+            padding: 0;
+        }
     }
 }
 
@@ -37,4 +51,8 @@ h4 {
     font-weight: 700;
     line-height: 128%;
     margin-bottom: 16px;
+
+    @include sm {
+        font-size: 22px;
+    }
 }
