--- a/src/partials/section/section.scss
+++ b/src/partials/section/section.scss
@@ -14,7 +14,9 @@
     }
 
     &#product {
+        @include sm {
 
+        }
     }
 
     &#product &__content {
@@ -24,6 +26,12 @@
         height: 100vh;
         padding: 160px 0 0 0;
         box-sizing: border-box;
+
+        @include sm {
+            padding: 48px 0;
+            height: auto;
+            width: 100%;
+        }    
     }
 
     &#product &__cover {
@@ -33,14 +41,33 @@
         right:0;
         height: 100%;
         margin-right: -120px;
+        width: 60%;
+
+        @include sm {
+            position: relative;
+            top:auto;
+            left:auto;
+            height: 500px;
+            width: 100%;
+            margin-right: 0;
+        
+        }
 
         & img {
             height: 100%;
+            position: absolute;
+            top:0;
+            right:0;
+            width: auto;
         }
     } 
 
     &#rpm {
         background-color: black;
+
+        @include sm {
+
+        }
     }
 
     &#rpm &__content {
@@ -50,6 +77,10 @@
         width: 50%;
         height: 100%;
         padding: 64px 0;
+
+        @include sm {
+            width: 100%;
+        }
     }
 
     &#rpm &__cover {
@@ -61,6 +92,7 @@
         position: absolute;
         top:0;
         left:0;
+        background-color: #000;
 
         & img {
             width: 100vw;
@@ -69,6 +101,12 @@
             pointer-events: none;
             height: 100%;
             object-fit: cover;
+            
+            @include sm {
+                object-position: right;
+                filter:brightness(0.5);
+            }
+
         }
     }
 
@@ -86,20 +124,64 @@
 
         .anim-show_ready {
             transform: scale(90%) translateY(30px);
+
+            @include sm {
+                transform: none;
+            }
         }
 
         .anim-show_complete {
             transform: scale(100%) translateY(0);
+
+            @include sm {
+                transform: none;
+            }
         }
     }   
 
     &#platform &__content {
         text-align: center;
         padding: 64px 124px 48px 124px;
+
+        @include sm {
+            padding: 64px 0 48px 0;
+            text-align: left;
+
+        }
     }
 
     &#platform &__content_column {
         padding-bottom: 48px;
+
+        @include sm {
+        }
+
+        & .columns li{
+
+
+            @include sm {
+                text-align: center;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                padding: 0 32px 32px;
+            }
+
+            & .button_blue {
+
+                margin-top: 16px;
+            }
+
+            & .app-logo {
+                margin: 0 0 0 -10px;
+
+                @include sm {
+                    transform: translateX(11px);
+                    margin: 0
+                }
+            }
+
+        }
     }    
 
 
@@ -110,32 +192,75 @@
     &#wristband &__content {
         text-align: center;
         padding: 64px 124px 48px 124px;
+
+        @include sm {
+            padding: 32px 0 48px 0;
+        }
     }
 
     &#wristband &__cover {
         padding: 0 200px 44px;
 
+        @include sm {
+            padding: 0;
+            transform: translateY(-30px);
+        }
+
         .anim-show {
             transition: all 1s ease;
+
         }
 
         .anim-show_ready {
             transform: scale(110%);
+
+            @include sm {
+                transform: none;
+            }
         }
 
         .anim-show_complete {
             transform: scale(100%);
+
+            @include sm {
+                transform: none;
+            }
         }
+    }
+
+    &#wristband .columns {
+        @include sm {
+            gap: 24px;
+        }
+
+        & .icon-list {
+            img {
+                @include sm {
+                    transform: scale(80%);
+                    transform-origin: center;
+                }
+            }
+        }
+        
     }
 
     &#mobile-app &__content {
         text-align: center;
         padding: 64px 124px 48px 124px;
+
+        @include sm {
+            padding: 64px 0 48px 0;
+        }
+
     }
 
     &#mobile-app &__cover {
         padding: 0 120px;
         margin-bottom: -32px;
+
+        @include sm {
+            padding: 0;
+        }
 
         .anim-show {
             transition: all 1.5s ease;
@@ -143,10 +268,18 @@
 
         .anim-show_ready {
             transform: scale(90%);
+
+            @include sm {
+                transform: none;
+            }
         }
 
         .anim-show_complete {
             transform: scale(100%);
+
+            @include sm {
+                transform: none;
+            }
         }
     }
 
@@ -160,6 +293,11 @@
             margin-bottom: 48px;
             position: relative;
             z-index: 100;
+
+            @include sm {
+                font-size: 16px;
+                margin-top: 16px;
+            }
         }
     }
 
@@ -167,11 +305,25 @@
         text-align: center;
         padding: 64px 124px 48px 124px;
 
+        @include sm {
+            padding: 64px 0 48px 0;
+        }
+
     }
 
     &#dashboard .columns {
         align-items: baseline;
         margin-bottom: 48px;
+
+        @include sm {
+            gap: 32px;
+        }
+
+        br {
+            @include sm {
+                display: none;
+            }
+        }
     }
 
     &#dashboard &__cover {
@@ -187,10 +339,18 @@
 
         .anim-show_ready {
             transform: scale(90%);
+
+            @include sm {
+                transform: none;
+            }
         }
 
         .anim-show_complete {
             transform: scale(100%);
+
+            @include sm {
+                transform: none;
+            }
         }
     }
 
@@ -198,12 +358,20 @@
         background-color: $color-main;
         color: #fff;
         margin: 0 calc(50% - 50vw);
-        padding: 48px calc(50vw - 50%);
+        padding: 84px calc(50vw - 50%);
+
+        @include sm {
+            padding: 48px calc(50vw - 50%);
+        }
 
         li ul {
             gap:16px;
             display: flex;
             flex-direction: column;
+        }
+
+        img {
+            height: 84px;
         }
     }
 
@@ -211,6 +379,33 @@
         
         & > .text, & h2 {
             width: 50%;
+
+            @include sm {
+                width: 100%;
+            }
+        }
+
+        & .columns {
+            @include sm {
+                gap: 32px;
+                margin-top: 24px;
+            }
+
+            & br {
+                display: none;
+            }
+
+        }
+
+        @include sm {
+            
+        }
+
+        img {
+            @include sm {
+                transform: scale(80%);
+                transform-origin: center;
+            }
         }
     }
 
@@ -220,8 +415,33 @@
 
     &#team {
 
+        padding: 64px 0;
+
+        @include sm {
+            padding: 32px 0;
+        }
+
         .hightlight:before {
             background-image: url("assets/line.svg")
+        }
+
+        .love {
+            position: relative;
+            color: rgba(0,0,0,0);
+            font-size: 12px;
+
+            &::before {
+                content: '';
+                display: block;
+                width: 42px;
+                height: 42px;
+                position: absolute;
+                bottom: -6px;
+                left: -8px;
+                background-image: url('assets/heart.svg');
+                background-size: 100%;
+                background-repeat: no-repeat;
+            }
         }
 
     }
