--- a/src/partials/text/text.scss
+++ b/src/partials/text/text.scss
@@ -7,9 +7,17 @@
 
     &_18 {
         font-size: 18px;
+
+        @include sm {
+            font-size: 16px;
+        }
     }
     &_24 {
         font-size: 24px;
+
+        @include sm {
+            font-size: 18px;
+        }
     }
 
     &_medium {
