--- a/src/partials/cards/cards.scss
+++ b/src/partials/cards/cards.scss
@@ -4,9 +4,36 @@
     
     &__wrapper {
         margin: 0 -48px;
+        position: relative;
+        
+        &::before {
+            content: '';
+            position: absolute;
+            top:0;
+            left: calc(50% - 50vw);
+            width: 10vw;
+            background: linear-gradient(90deg, rgba(250,250,250,0.3) 0%, rgba(250,250,250,0) 100%);
+            height: 100%;
+            z-index: 100;
+        }
+
+        &::after {
+            content: '';
+            position: absolute;
+            top:0;
+            left: calc(50% + 50vw - 10vw);
+            width: 10vw;
+            background: linear-gradient(90deg, rgba(250,250,250,0) 0%, rgba(250,250,250,0.3) 100%,);
+            height: 100%;
+            z-index: 100;
+        }
 
         @include sm {
             margin: 0 -8px;
+
+            &::before, &::after {
+                display: none;
+            }
         }
     }
 
@@ -15,6 +42,7 @@
         gap: 32px;
         /*transform: translateX(calc(-100% - 32px));*/
         transition: all .5s ease;
+
 
         @include sm {
             flex-direction: column;
@@ -69,6 +97,14 @@
             padding: 24px 24px 48px;
             position: sticky;
             top: 24px;
+
+            &:nth-child(2) {
+                background-color: #24242E;
+            }
+
+            &:nth-child(3) {
+                background-color: #1E1E26;
+            }
         }
 
         &.card_real-time {
