--- a/src/partials/button/button.scss
+++ b/src/partials/button/button.scss
@@ -5,6 +5,10 @@
         background-color: $color-main;
         border-radius: 25px;
         padding: 8px 16px;
+
+        &:hover {
+            background-color: #0068E2; 
+        }
     }
 
     &_clear {
@@ -18,6 +22,9 @@
         position: relative;
 
         &.button_focus {
+
+            pointer-events: none;
+
             &::before {
                 content: '';
                 display: block;
@@ -30,6 +37,10 @@
                 background-size: 100% 6px;
                 background-repeat: no-repeat;
             }
+        }
+
+        &:hover {
+            opacity: .85;
         }
     }    
 }
