--- a/src/partials/section/section.scss
+++ b/src/partials/section/section.scss
@@ -24,8 +24,11 @@
         z-index: 200;
         width: 50%;
         height: 100vh;
-        padding: 160px 0 0 0;
         box-sizing: border-box;
+
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
 
         @include sm {
             padding: 48px 0;
@@ -37,7 +40,7 @@
     &#product &__cover {
         position: absolute;
         z-index: 100;
-        top:0;
+        top: calc(50vh - 440px);
         right:0;
         height: 100%;
         margin-right: -120px;
@@ -59,6 +62,7 @@
             top:0;
             right:0;
             width: auto;
+            max-height: 920px;
         }
     } 
 
